# mini-rpc

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  INSTALL.sh  Makefile  Problems.md  README.md  TcpServer.cc  TcpServer.h  build.sh  package-lock.json  page.html  plan.md
.github/workflows/: cmake-single-platform.yml  deploy-docs.yml  release.yml
cmake/: MiniRpcConfig.cmake.in  version.cmake
day1.socket/: socket_tcp.cc  tcp_server.cc
day10.rpc_mcore/: Makefile  README.md  UserService1.cc  UserService1.h  test.cc
day2.epoll/: main_ET.cc  main_LT.cc
day3.client/: tcp_client.cc
day4.json/: Makefile  json_tokit_test.cc  user.json
day5.protocol/: Decoder.h  Encoder.h  JsonSerialize.h  Makefile  ProtobufSerialize.h  README.md  Serialize.cc  Serialize.h  protocol.h  test  test.cc
day6.common/: Makefile  logger.cc  test.cc  timeStamp.cc
day6.common/common/: blockedQueue.h  logger.h  nonecopyable.h  timeStamp.h
day7.rpc/: Makefile  README.md  Response.h  RpcServer.cc  UserService.h
day8.rpc_server/: Makefile  README.md  Request.h  RpcServer.cc  RpcServer.h  UserService.cc  UserService.h  functioin_traits.h  test.cc  tuple_util.h
day9.rpc_client/: Makefile  README.md  RpcClient.h  RpcException.h  RpcServerDemo.h  test.cc
deploy/nacos/: docker-compose.yaml
doc/: nacos_register_demo.cpp
docs/: index.md  package-lock.json  package.json  server.py
docs/.vitepress/: config.ts  public.bak
docs/.vitepress/theme/: index.ts  style.css
docs/en/: index.md
docs/en/about/: changelog.md  faq.md
docs/en/api/: reference.md
docs/en/deploy/: nacos.md
docs/en/guide/: architecture.md  getting-started.md  protocol.md  usage.md
docs/scripts/: create-root-redirect.mjs
docs/zh/: index.md
docs/zh/about/: changelog.md  faq.md
docs/zh/api/: reference.md
docs/zh/deploy/: nacos.md
docs/zh/guide/: architecture.md  getting-started.md  interview-qa.md  protocol.md  usage.md
example/: Client.cc  Server.cc  UserService.cc  UserService.h
examples/: CMakeLists.txt
examples/config/: CMakeLists.txt  load_conf.cc
examples/protobuf_demo/: CMakeLists.txt  protobuf_demo.cc
examples/protobuf_demo/protoc/: person.proto
examples/simple/: CMakeLists.txt  Client.cc
examples/simple_protobuf/: CMakeLists.txt  Client.cc  UserService.cc  UserService.h  protobuf_demo.cc
examples/simple_protobuf/protoc/: person.proto  user.proto
include/minirpc/: version.h
include/minirpc/common/: Buffer.h  Random.h  Response.h  RpcException.h  ThreadPool.h  Type.h  blockedQueue.h  functioin_traits.h  function_traits.h  logger.h  nacos_config.h  nonecopyable.h  timeStamp.h  tuple_helper.h  utils.h
include/minirpc/core/: IConnection.h  IConnectionPool.h  IConnectionPoolFactory.h  RpcClient.h  RpcServer.h  utils.h
include/minirpc/core/macro/: rpc_service_bind.h  rpc_service_stub.h
include/minirpc/net/: Buffer.h  BufferedConnection.h  Channel.h  Conn.h  EpollPoller.h  EventLoop.h  Poller.h  TcpClient.h  TcpServer.h  utils.h
include/minirpc/protocol/: Decoder.h  Encoder.h  JsonSerialize.h  ProtobufSerialize.h  Protocol.h  Serialize.h  Type.h
nacos/: docker-compose.yaml
src/: main.cc
src/minirpc/common/: Random.cc  ThreadPool.cc  logger.cc  nacos_config.cc  timeStamp.cc  utils.cc
src/minirpc/core/: RpcClient.cc  RpcConnection.cc  RpcConnection.h  RpcConnectionPool.cc  RpcConnectionPool.h  RpcServer.cc  TcpConnectionPoolFactory.cc  TcpConnectionPoolFactory.h  nacos_config.cc  utils.cc
src/minirpc/net/: Channel.cc  DefaultPoller.cc  EpollPoller.cc  EventLoop.cc  Poller.cc  TcpClient.cc  TcpServer.cc  utils.cc
src/minirpc/protocol/: Serialize.cc
tests/: CMakeLists.txt  test_common.cc  test_core.cc  test_net.cc  test_protocol.cc
